improve: improve import time with lazy regex and imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,6 +156,13 @@ commands = [
     ["python", "-m", "timeit", "from mdformat._cli import run", 'run(["README.md", "docs/", "--check", "--wrap", "50"])'],
 ]
 
+[tool.tox.env."benchmark-import"]
+description = "Measure module import times. Tox sends mdformat output to stderr, so to filter use e.g. `tox -e benchmark-import 2> >(grep mdformat)`."
+deps = []
+commands = [
+    ["python", "-X", "importtime", "-m", "mdformat"],
+]
+
 
 [tool.coverage.run]
 source = ["mdformat"]
