import time: lazify imports enough that markdown_it isnt imported

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,7 +160,7 @@ commands = [
 description = "Measure module import times. Tox sends mdformat output to stderr, so to filter use e.g. `tox -e benchmark-import 2> >(grep mdformat)`."
 deps = []
 commands = [
-    ["python", "-X", "importtime", "-m", "mdformat"],
+    ["python", "-X", "importtime", "-m", "mdformat", "--version"],
 ]
 
 
