--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     { name = "Taneli Hukkinen", email = "hukkin@users.noreply.github.com" },
 ]
 license = { file = "LICENSE" }
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     'markdown-it-py>=1,<5',
     'tomli >=1.1.0; python_version < "3.11"',
@@ -62,7 +62,7 @@ xfail_strict = true
 [tool.tox]
 requires = ["tox>=4.21.1"]
 # Only run pytest envs when no args given to tox
-env_list = ["3.9", "3.10", "3.11", "3.12", "3.13"]
+env_list = ["3.10", "3.11", "3.12", "3.13"]
 
 [tool.tox.env_run_base]
 description = "run tests under {base_python}"
